# baby-mars

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BABY_MARS_SPEC.md  CLAUDE.md  Caddyfile  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  alembic.ini  debug_appraisal.py  docker-compose.yml  planning.md  pyproject.toml  test_apollo.py  test_apollo_birth.py  test_runner.py
docs/: ALEQ_ARCHITECTURE.md  API_CONTRACT_V0.md  API_OVERVIEW.md
docs/papers/: 01-competence-based-autonomy.md  02-ai-years-epistemic-maturity.md  03-self-correcting-validation.md  04-context-conditional-beliefs.md  05-causal-attribution.md  06-act-benchmark.md  07-moral-asymmetry-event-sourcing.md  08-three-column-working-memory.md  09-moral-asymmetry-multiplier.md  10-category-specific-invalidation-thresholds.md  11-hierarchical-beliefs-cascading-updates.md  12-peak-end-rule-memory-weighting.md  13-interference-based-memory-decay.md  14-cognitive-engrams-multimodal-memory.md  15-birth-system-cold-start.md  16-duration-estimation-task-scheduling.md  17-social-awareness-relationship-dynamics.md  18-time-based-context-activation.md  19-latent-trajectory-learning.md  20-planner-translator-driver.md  OPEN-QUESTIONS.md  README.md
docs/scenarios/close/: README.md  akshay_5.md  maria_santos_ap_specialist.md  sarah-.md
docs/scenarios/dockwa/: dockwa.md
docs/scenarios/gghc/: gghc.md
docs/scenarios/storagecorner/: amanda_torres_covenant_analyst.md  elena_martinez_entity_specialist.md  jonathan_walsh_fund_manager.md  thomas_chen_finance_director.md
scripts/: check_file_size.py  check_function_size.py  guardian.py
src/: claude_client.py  claude_models.py  claude_singleton.py  cli.py  observability.py
src/analytics/: __init__.py  posthog_client.py
src/api/: __init__.py  auth.py  rate_limit.py  server.py
src/birth/: __init__.py  apollo_birth.py  beliefs.py  birth_system.py  defaults.py  enrichment.py  knowledge.py  knowledge_packs.py  mount.py  mount_models.py  persist.py
src/cognitive_loop/: checkpointer.py  graph.py  tracing.py
src/connectors/: __init__.py  stargate.py
src/graphs/: belief_graph.py  belief_graph_manager.py  social_graph.py
src/llm/: __init__.py
src/mount/: __init__.py  active_subgraph.py
src/persistence/: __init__.py  beliefs.py  database.py  knowledge.py  knowledge_schema.sql  notes.py  rapport.py
src/scheduler/: __init__.py  defaults.py  evaluator.py  executor.py  message_factory.py  note_scanner.py  persistence.py  pulse_scheduler.py  templates.py  time_awareness.py  triggers.py
src/skills/: accounting_domain.md  response_generation.md  situation_appraisal.md  validation_rules.md  work_unit_vocabulary.md
src/state/: constants.py  factory.py  main.py  reducers.py  schema.py  types.py
src/utils/: __init__.py  retry.py
tests/: __init__.py  conftest.py  test_action_proposal.py  test_apollo.py  test_apollo_birth.py  test_belief_graph.py  test_belief_graph_manager.py  test_beliefs_persistence.py  test_cognitive_loop.py  test_execution.py  test_first_impression.py  test_personality_gate.py  test_rapport_persistence.py  test_runner.py  test_scenarios.py  test_schema.py
tests/harness/: __init__.py  extractor.py  reporter.py  runner.py  schema.py  scorer.py
(+93 files in other folders)
