[project]
name = "baby-mars"
version = "0.1.0"
description = "Production cognitive architecture using Claude + LangGraph - Implementation of Aleq research"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Aleq", email = "hello@aleq.ai"}
]

dependencies = [
    # Core orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",

    # LLM
    "anthropic>=0.40.0",

    # Observability
    "langsmith>=0.1.0",
    "posthog>=3.0.0",

    # Graph structure
    "networkx>=3.2",

    # Persistence
    "psycopg[binary]>=3.1.0",
    "langgraph-checkpoint-postgres>=1.0.0",
    "asyncpg>=0.29.0",

    # API Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",

    # HTTP client
    "httpx>=0.27.0",

    # Redis for rate limiting
    "redis>=5.0.0",

    # Database migrations
    "alembic>=1.13.0",

    # Utilities
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
baby-mars = "src.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line length handled separately

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
